--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,19 @@
     animation: none; 
   }
 
- 
+  .marqueeGroup3{
+    flex-shrink: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    white-space: nowrap;
+    width: 10%;
+    justify-content: space-around;
+    animation: scrollX 25s linear infinite;
+  }
+
+
+
   .imageGroup1 {
     width: 150%; 
     padding: 10px; 
@@ -115,6 +127,10 @@
   .imageGroup2 {
     width: 100%; 
     padding: 10px; 
+  }
+  .imageGroup3 {
+    width: 100%; 
+    padding: -10px; 
   }
 
   .imaGe {
@@ -126,6 +142,14 @@
     height: auto; 
   }
   
+  .imaGe3 {
+    aspect-ratio: unset; 
+    height: auto; 
+  }
+  
+
+
+
 }
 
 
@@ -159,6 +183,40 @@
   width: clamp(10rem, 1rem + 60vmin, 30rem);
   padding: calc(clamp(10rem, 1rem + 36vmin, 30rem) / 12);
 }
+
+
+@media (min-width: 1500px){
+  .imageGroup1{
+    display: grid;
+    place-items: center;
+    width: 200%;
+    padding: calc(clamp(10rem, 1rem + 36vmin, 30rem) / 8);
+  }
+
+
+  .marquee{
+    width: 85vw;
+    margin:0 10%;
+  }
+
+  .imaGe {
+    aspect-ratio: 1/1;
+    height: 100px; 
+  }
+  .marqueeGroup{
+    flex-shrink: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    white-space: nowrap;
+    width: 80%;
+    justify-content: space-around;
+    animation: scrollX 20s linear infinite;
+  
+  }
+}
+
+
 
 .imageGroup2{
   display: grid;
@@ -220,4 +278,30 @@
 
 .wrap{
   background: linear-gradient(to right, rgba(56, 88, 255, 0.2), rgba(183, 69, 255, 0.2), rgba(217, 64, 255, 0.2));
+}
+
+
+
+
+.button-volume-active {
+  position: absolute;
+  bottom: -140px;
+  right: 130px;
+}
+
+@media (min-width: 768px) and (max-width: 1020px) {
+  .button-volume-active {
+    position: absolute;
+    right: 80px;
+    top: 540px;
+  }
+}
+
+
+@media (max-width: 767px) {
+  .button-volume-active {
+    position: absolute;
+    left: 310px;
+    top: 420px;
+  }
 }
