--- a/src/index.css
+++ b/src/index.css
@@ -119,8 +119,8 @@
 
 
   .imageGroup1 {
-    width: 150%; 
-    padding: 10px; 
+    width: 10%; 
+    padding: 0px; 
   }
 
 
@@ -131,6 +131,12 @@
   .imageGroup3 {
     width: 100%; 
     padding: -10px; 
+  }
+  .imageGroup1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
   }
 
   .imaGe {
@@ -159,7 +165,18 @@
   flex-direction: row;
   align-items: center;
   white-space: nowrap;
-  width: 100%;
+  width: max-content;
+  justify-content: space-around;
+  animation: scrollX 20s linear infinite;
+
+}
+.marqueeGroup2{
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  white-space: nowrap;
+  width: max-content;
   justify-content: space-around;
   animation: scrollX 20s linear infinite;
 
@@ -170,7 +187,7 @@
   flex-direction: row;
   align-items: center;
   white-space: nowrap;
-  width: 100%;
+  width: max-content;
   /* margin: 0 20px; */
   justify-content: space-around;
   animation: scrollX 25s linear infinite;
@@ -178,10 +195,10 @@
 }
 
 .imageGroup1{
-  display: grid;
-  place-items: center;
-  width: clamp(10rem, 1rem + 60vmin, 30rem);
-  padding: calc(clamp(10rem, 1rem + 36vmin, 30rem) / 12);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
 }
 
 
@@ -209,7 +226,7 @@
     flex-direction: row;
     align-items: center;
     white-space: nowrap;
-    width: 80%;
+    width: max-content;
     justify-content: space-around;
     animation: scrollX 20s linear infinite;
   
@@ -217,41 +234,47 @@
 }
 
 
+.largerImage {
+  width: 200px; /* Adjust the image width as desired */
+  height: auto; /* Maintain the aspect ratio */
+}
 
 .imageGroup2{
-  display: grid;
-  place-items: center;
-  width: 10rem;
-  padding: calc(clamp(10rem, 0rem + 16vmin, 30rem) / 10 );
-}
-.imageGroup3{
   display: flex;
-  
-  width: 40rem;
-  margin: 0 12px;
-  place-items: center;
-  /* padding: calc(clamp(10rem, 0rem + 36vmin, 30rem) / 60); */
+  justify-content: center;
+  align-items: center;
+  margin: 0 16px;
+}
+
+
+.imageGroup3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 36px;
+}
+
+
+.imaGe3 {
+  object-fit: contain;
+  width: 100px; /* Adjust the image width as desired */
+  height: 130px; /* Adjust the image height as desired */
+  border-radius: 0.5rem;
+  aspect-ratio: 4/4;
 }
 
 .imaGe{
   object-fit: contain;
-  width: 100%;
+  width: 80%;
   height: 100%;
   border-radius: 0.5rem;
   aspect-ratio: 16/9;
 }
-.imaGe3{
-  object-fit: contain;
-  width: 150%;
-  /* margin: 0 30%; */
-  height: 200%;
-  border-radius: 0.5rem;
-  aspect-ratio: 4/4;
-}
+
 .imaGe2{
-  object-fit: cover;
-  width: 150%;
-  height: 150%;
+  object-fit: contain;
+  width: 100%;
+  height: 80%;
   border-radius: 0.4rem;
   aspect-ratio: 16/8;
 }
@@ -278,6 +301,13 @@
 
 .wrap{
   background: linear-gradient(to right, rgba(56, 88, 255, 0.2), rgba(183, 69, 255, 0.2), rgba(217, 64, 255, 0.2));
+}
+
+
+@media (max-width: 768px){
+  .wrap{
+    background: none;
+  }
 }
 
 
