--- a/src/index.css
+++ b/src/index.css
@@ -235,8 +235,8 @@
 
 
 .largerImage {
-  width: 200px; /* Adjust the image width as desired */
-  height: auto; /* Maintain the aspect ratio */
+  width: 200px; 
+  height: auto; 
 }
 
 .imageGroup2{
